// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ToolsForm /> Snapshot test 1`] = `
<reduxForm
  currentUser={
    Object {
      "firstName": "beebee",
      "lastName": "sanders",
      "username": "bsanders",
    }
  }
  error={null}
  handleSubmit={[Function]}
  loggedIn={false}
  pristine={true}
  reset={false}
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
  submitSucceeded={null}
  submitting={false}
  tools={
    Array [
      Object {
        "description": "description-1",
        "id": 1,
        "price": 1,
        "rating": 1,
        "title": "title-1",
        "url": "url1",
      },
      Object {
        "description": "description-2",
        "id": 2,
        "price": 2,
        "rating": 2,
        "title": "title-2",
        "url": "url2",
      },
      Object {
        "description": "description-3",
        "id": 3,
        "price": 3,
        "rating": 3,
        "title": "title-3",
        "url": "url3",
      },
      Object {
        "description": "description-4",
        "id": 4,
        "price": 4,
        "rating": 4,
        "title": "title-4",
        "url": "url4",
      },
      Object {
        "description": "description-5",
        "id": 5,
        "price": 5,
        "rating": 5,
        "title": "title-5",
        "url": "url5",
      },
    ]
  }
/>
`;

exports[`<ToolsForm /> Snapshot test II 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <reduxForm
    currentUser={
        Object {
            "firstName": "beebee",
            "lastName": "sanders",
            "username": "bsanders",
          }
    }
    error={null}
    handleSubmit={[Function]}
    loggedIn={false}
    pristine={true}
    reset={false}
    store={
        Object {
            "clearActions": [Function],
            "dispatch": [Function],
            "getActions": [Function],
            "getState": [Function],
            "replaceReducer": [Function],
            "subscribe": [Function],
          }
    }
    submitSucceeded={null}
    submitting={false}
    tools={
        Array [
            Object {
              "description": "description-1",
              "id": 1,
              "price": 1,
              "rating": 1,
              "title": "title-1",
              "url": "url1",
            },
            Object {
              "description": "description-2",
              "id": 2,
              "price": 2,
              "rating": 2,
              "title": "title-2",
              "url": "url2",
            },
            Object {
              "description": "description-3",
              "id": 3,
              "price": 3,
              "rating": 3,
              "title": "title-3",
              "url": "url3",
            },
            Object {
              "description": "description-4",
              "id": 4,
              "price": 4,
              "rating": 4,
              "title": "title-4",
              "url": "url4",
            },
            Object {
              "description": "description-5",
              "id": 5,
              "price": 5,
              "rating": 5,
              "title": "title-5",
              "url": "url5",
            },
          ]
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "currentUser": Object {
        "firstName": "beebee",
        "lastName": "sanders",
        "username": "bsanders",
      },
      "error": null,
      "handleSubmit": [Function],
      "loggedIn": false,
      "pristine": true,
      "reset": false,
      "store": Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "submitSucceeded": null,
      "submitting": false,
      "tools": Array [
        Object {
          "description": "description-1",
          "id": 1,
          "price": 1,
          "rating": 1,
          "title": "title-1",
          "url": "url1",
        },
        Object {
          "description": "description-2",
          "id": 2,
          "price": 2,
          "rating": 2,
          "title": "title-2",
          "url": "url2",
        },
        Object {
          "description": "description-3",
          "id": 3,
          "price": 3,
          "rating": 3,
          "title": "title-3",
          "url": "url3",
        },
        Object {
          "description": "description-4",
          "id": 4,
          "price": 4,
          "rating": 4,
          "title": "title-4",
          "url": "url4",
        },
        Object {
          "description": "description-5",
          "id": 5,
          "price": 5,
          "rating": 5,
          "title": "title-5",
          "url": "url5",
        },
      ],
    },
    "ref": null,
    "rendered": null,
    "type": "reduxForm",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "currentUser": Object {
          "firstName": "beebee",
          "lastName": "sanders",
          "username": "bsanders",
        },
        "error": null,
        "handleSubmit": [Function],
        "loggedIn": false,
        "pristine": true,
        "reset": false,
        "store": Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "submitSucceeded": null,
        "submitting": false,
        "tools": Array [
          Object {
            "description": "description-1",
            "id": 1,
            "price": 1,
            "rating": 1,
            "title": "title-1",
            "url": "url1",
          },
          Object {
            "description": "description-2",
            "id": 2,
            "price": 2,
            "rating": 2,
            "title": "title-2",
            "url": "url2",
          },
          Object {
            "description": "description-3",
            "id": 3,
            "price": 3,
            "rating": 3,
            "title": "title-3",
            "url": "url3",
          },
          Object {
            "description": "description-4",
            "id": 4,
            "price": 4,
            "rating": 4,
            "title": "title-4",
            "url": "url4",
          },
          Object {
            "description": "description-5",
            "id": 5,
            "price": 5,
            "rating": 5,
            "title": "title-5",
            "url": "url5",
          },
        ],
      },
      "ref": null,
      "rendered": null,
      "type": "reduxForm",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
